dev/deployment.yaml
#deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  namespace: myapp
  labels:
    app: hello-world-app
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
      - name: hello-world-app
        image: registry.nipa.cloud/lun-test/hello-world-app:latest # ใช้ image ที่ push ไป
        ports:
        - containerPort: 80
