dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app-service
  namespace: default
spec:
  type: ClusterIP  
  selector:
    app: hello-world-app
  ports:
    - name: http
      port: 80
      targetPort: 80
